<resources>
    <string name="app_name">Gaming-Assistant</string>
    <string name="login_button">Login</string>
    <string name="auth_error">Authorization error occurred!</string>
    <integer name="com_vk_sdk_AppId">5732584</integer>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>

    <string name="empty">Empty.</string>
    <string name="description">Description</string>
    <string name="developer">Developer</string>
    <string name="add">Add</string>
    <string name="status">Status</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="birth_date">Birth date</string>
    <string name="sign_out">Sign out</string>

</resources>
