<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/friends"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/friends" />
        <item
            android:id="@+id/categories"
            android:icon="@drawable/ic_add_to_photos_black_24dp"
            android:title="@string/categories" />
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search" />
    </group>

</menu>
