<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:padding="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/fragment_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_view_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/title_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:padding="8dp"
                    android:text="@string/status"
                    android:textColor="#222"
                    android:textStyle="bold"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title_status"

                    android:padding="8dp"
                    android:textColor="#666"
                    android:textSize="14dp" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_view_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/title_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:padding="8dp"
                    android:text="@string/country"
                    android:textColor="#222"
                    android:textStyle="bold"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title_country"

                    android:padding="8dp"
                    android:textColor="#666"
                    android:textSize="14dp" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_view_bdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/title_bdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:padding="8dp"
                    android:text="@string/birth_date"
                    android:textColor="#222"
                    android:textStyle="bold"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/bdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title_bdate"

                    android:padding="8dp"
                    android:textColor="#666"
                    android:textSize="14dp" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
